# cmdlib

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cmdlib-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
examples/change-directory/: CMakeLists.txt  main.cpp
examples/ls/: CMakeLists.txt  main.cpp
examples/scripts/: CMakeLists.txt  hi.py  main.cpp
examples/streams/: CMakeLists.txt  inouterr.py  main.cpp
include/cmdlib/: command-impl.hpp  command.hpp  command_impl.hpp  export.hpp  handle_stream.hpp
include/cmdlib/unix/: command-impl.hpp
src/: command.cpp  handle_stream.cpp
src/unix/: command-impl.cpp  command_impl.cpp
tests/: CMakeLists.txt  command_test.cpp  command_utils.h
tests/test_data/: echo_err.py
